--- a/config/database.yml
+++ b/config/database.yml
@@ -14,6 +14,7 @@ default: &default
   password: 12345
 
 development:
+    adapter: postgresql
   <<: *default
   database: voting
 
@@ -22,8 +23,10 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  adapter: postgresql
   database: voting
 
 production:
   <<: *default
+  adapter: postgresql
   database: voting
