--- a/config/database.yml
+++ b/config/database.yml
@@ -1,32 +1,28 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
+--- 
+default: 
   adapter: postgresql
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
   encoding: unicode
-  host: 'localhost'
-  username: postgres
+  host: localhost
   password: 12345
-
-development:
-    adapter: postgresql
-  <<: *default
-  database: voting
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
+  username: postgres
+development: 
   adapter: postgresql
-  database: voting
-
-production:
-  <<: *default
+  database: db/development
+  encoding: unicode
+  host: localhost
+  password: 12345
+  username: postgres
+production: 
   adapter: postgresql
-  database: voting
+  database: db/production
+  encoding: unicode
+  host: localhost
+  password: 12345
+  username: postgres
+test: 
+  adapter: postgresql
+  database: db/test
+  encoding: unicode
+  host: localhost
+  password: 12345
+  username: postgres
